--- a/EF_NetCore_052022/EF_NetCore_052022/appsettings.json
+++ b/EF_NetCore_052022/EF_NetCore_052022/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "WalkConnectionString": "Data Source=PUGLIONKING;Initial Catalog=WalkDb;Integrated Security=True;Trusted_Connection=True"
+  }
 }
