--- a/EF_NetCore_052022/EF_NetCore_052022/appsettings.json
+++ b/EF_NetCore_052022/EF_NetCore_052022/appsettings.json
@@ -8,5 +8,13 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "WalkConnectionString": "Data Source=PUGLIONKING;Initial Catalog=WalkDb;Integrated Security=True;Trusted_Connection=True"
+  },
+  "location": {
+    "Culture": "vn"
+  },
+  "Jwt": {
+    "Key": "walkEntityNetCoreByThuc052022",
+    "Issuer": "https://localhost:7267",
+    "Audience": "https://localhost:7267",
   }
 }
